# jaxmg

./: .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  WHEEL_BUILD.md  benchmark.py  index.html  mkdocs.yml  mp_test.py  mp_test.sh  objects.inv  plot_matrices.py  pyproject.toml  pytest.ini  setup.py  sharding.py  sitemap.xml  test.py  tile.py
.github/actions/build-cuda-libs/: action.yml
.github/workflows/: build-wheels.yml  build_wheel.yml  cmake.yml  deploy-docs.yml  main.yml
.github/workflows/actions/: compile_cuda.yml
.jenkins/: Dockerfile  Jenkinsfile
_static/: custom.css
api/: index.html
api/cyclic_1d/: index.html
api/potri/: index.html
api/potrs/: index.html
api/potrs_mp/: index.html
api/syevd/: index.html
benchmark/: benchmark_potrs.py
benchmark/mpdmd/: mp_test.py  mp_test.sh
benchmark/mpmd/: benchmark.py  benchmark.sh  plot_benchmark.py
benchmark/spmd/: benchmark_potrs.py  benchmark_syevd.py  plot_benchmark.ipynb
docs/: index.md  install.md
docs/_static/: custom.css
docs/api/: cyclic_1d.md  index.md  potri.md  potrs.md  potrs_mp.md  syevd.md
docs/examples/: block_cyclic_data_layout.ipynb  potrs_example.ipynb  potrs_shard_map.ipynb  spmd_mpmd.ipynb
docs/technical_details/: col_maj.md  mpmd.md  spmd.md
examples/: block_cyclic_example_1.py  multi_process.py  multi_process.sh  plot_matrices.py  potrs_no_shardmap.py  readme.py
examples/block_cyclic_data_layout/: index.html
examples/potrs_example/: index.html
examples/potrs_shard_map/: index.html
examples/spmd_mpmd/: index.html
install/: index.html
profile/: profile_potrs.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/_static/: mathjax.js
site/api/: index.html
site/api/cyclic_1d/: index.html
site/api/potri/: index.html
site/api/potrs/: index.html
site/api/syevd/: index.html
site/examples/block_cyclic_data_layout/: index.html
site/examples/potrs_example/: index.html
site/examples/potrs_shard_map/: index.html
site/examples/spmd_mpmd/: index.html
site/install/: index.html
site/technical_details/mpmd/: index.html
site/technical_details/spmd/: index.html
src/cuda/: cusolverMg_utils.h  cusolver_utils.h  cyclic.cu  ipc_utils.cc  ipc_utils.h  jax_utils.cc  jax_utils.h  layout.cpp  layout.h  potrf.cu  potri.cu  potrs.cu  potrs_mp.cu  potrs_old.cu  process_barrier.h  shm.cc  shm.h  syevd.cu  syevd_no_V.cu  thread_barrier.h
src/cuda/include/: cusolver_utils.h  process_barrier.h  thread_barrier.h
src/cuda/utils/: ipc_utils.cc  ipc_utils.h  jax_utils.cc  jax_utils.h  shm.cc  shm.h
src/jaxmg/: __init__.py  _cyclic_1d.py  _potri.py  _potrs.py  _potrs_mp.py  _syevd.py  block_cyclic.py  cyclic_1d.py  potrf.py  potri.py  potrs.py  potrs_mp.py  syevd.py  utils.py
src/python/: __init__.py  block_cyclic.py  potrf.py  utils.py
technical_details/: index.html
technical_details/col_maj/: index.html
technical_details/mpmd/: index.html
technical_details/spmd/: index.html
tests/: block_cyclic_cpu_test.py  block_cyclic_test.py  cpu_runner.py  runner.py  test_cusolver.py  test_examples.py  test_launch_parallel.py  test_potrf.py  test_potri.py  test_potrs.py  test_syevd.py  test_syevd_interface.py
tests/cpu_only/: block_cyclic_cpu_test.py  test_launch_cpu.py  test_potri_interface.py  test_potrs_interface.py  test_syevd_interface.py
tests/mpmd/: run_2dgrid_reduce.py  run_potrs.py  run_test_potrs.py  test_launch_2d_grid_reduce.py  test_launch_mp.py  test_launch_potrs.py
tests/spmd/: test_cyclic_1d.py  test_examples.py  test_potri.py  test_potrs.py  test_syevd.py
tools/: deploy_docs.sh  release.sh
