[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxmg"
version = "0.1.0"
description = "Python wrapper around cuSolverMg with JAX support"
authors = [{ name = "Roeland Wiersema" }]
dependencies = ["pytest==8.2.1", "matplotlib>=3.10.3"]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jaxmg = [
    "bin/libcyclic.so",
    "bin/libpotrs.so",
    "bin/libpotrs_mp.so",
    "bin/libpotri.so",
    "bin/libsyevd.so",
    "bin/libsyevd_no_V.so",
]

[project.optional-dependencies]

cuda = ["jax[cuda12]>=0.6.2"]
docs = [
    "jax>=0.6.2",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.23",
    "mkdocstrings==0.30.1",
    "mkdocs-exclude==1.0.2",
    "mkdocs-ipynb==0.1.1",
    "hippogriffe==0.2.2",
]

[tool.cibuildwheel]
# Only build for Linux x86_64 (no macOS, Windows, or other architectures)
build = ["cp311-manylinux_x86_64", "cp312-manylinux_x86_64", "cp313-manylinux_x86_64", "cp314-manylinux_x86_64"]

# Use manylinux_2_28 for GCC 11 support
manylinux-x86_64-image = "manylinux_2_28"

# Skip tests during wheel build (requires GPU)
test-skip = "*"
