[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxmg"
version = "0.1.0"
description = "JAXMg provides a C++ interface between JAX and cuSolverMg, NVIDIA's multi-GPU linear solver. "
authors = [{ name = "Roeland Wiersema" }]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "jax>=0.6.1; sys_platform == 'darwin'",
    "jax[cuda]>=0.6.1; sys_platform == 'linux'",
]
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/therooler/jaxmg"
Issues = "https://github.com/therooler/jaxmg/issues"
Docs = "https://therooler.github.io/jaxmg/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jaxmg = [
    "bin/libcyclic.so",
    "bin/libpotrs.so",
    "bin/libpotrs_mp.so",
    "bin/libpotri.so",
    "bin/libsyevd.so",
    "bin/libsyevd_no_V.so",
]

[project.optional-dependencies]

docs = [
    "jax>=0.6.2",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.23",
    "mkdocstrings==0.30.1",
    "mkdocs-exclude==1.0.2",
    "mkdocs-ipynb==0.1.1",
    "hippogriffe==0.2.2",
]

dev = [
    "matplotlib>=3.10.3",
    "jax[cuda12]>=0.6.2",
    "pytest==8.2.1",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.23",
    "mkdocstrings==0.30.1",
    "mkdocs-exclude==1.0.2",
    "mkdocs-ipynb==0.1.1",
    "hippogriffe==0.2.2",
]
