[project]
name = "jaxmg"
version = "0.0.2"
description = "JAXMg provides a C++ interface between JAX and cuSolverMg, NVIDIA's multi-GPU linear solver. "
authors = [{ name = "Roeland Wiersema" }]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "jax>=0.6.1; sys_platform == 'darwin'",
    "jax[cuda]>=0.6.1; sys_platform == 'linux'",
]
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/therooler/jaxmg"
Issues = "https://github.com/therooler/jaxmg/issues"
Docs = "https://therooler.github.io/jaxmg/"

# [tool.setuptools.packages.find]
# where = ["src"]

# [tool.setuptools.package-data]
# jaxmg = [
#     "bin/libcyclic.so",
#     "bin/libpotrs.so",
#     "bin/libpotrs_mp.so",
#     "bin/libpotri.so",
#     "bin/libsyevd.so",
#     "bin/libsyevd_no_V.so",
# ]
[tool.cibuildwheel]
# Only build for Linux x86_64 (no macOS, Windows, or other architectures)
build = ["cp311-manylinux_x86_64", "cp312-manylinux_x86_64", "cp313-manylinux_x86_64", "cp314-manylinux_x86_64"]

# Use manylinux_2_28 for GCC 11 support
manylinux-x86_64-image = "manylinux_2_28"

# Skip tests during wheel build (requires GPU)
test-skip = "*"

[project.optional-dependencies]

docs = [
    "jax>=0.6.2",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.23",
    "mkdocstrings==0.30.1",
    "mkdocs-exclude==1.0.2",
    "mkdocs-ipynb==0.1.1",
    "hippogriffe==0.2.2",
]

dev = [
    "matplotlib>=3.10.3",
    "jax[cuda12]>=0.6.2",
    "pytest==8.2.1",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.23",
    "mkdocstrings==0.30.1",
    "mkdocs-exclude==1.0.2",
    "mkdocs-ipynb==0.1.1",
    "hippogriffe==0.2.2",
]
